--- a/src/Moq.Extensions.DataReader.Tests/Moq.Extensions.DataReader.Tests.csproj
+++ b/src/Moq.Extensions.DataReader.Tests/Moq.Extensions.DataReader.Tests.csproj
@@ -13,6 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Moq.Extensions.DataReader\Moq.Extensions.DataReader.csproj" />
+    <ProjectReference Include="..\Moq.Extensions.DataReader\Moq.Extensions.DataReader.csproj" />
   </ItemGroup>
 </Project>
