--- a/src/Moq.Extensions.DataReader/Moq.Extensions.DataReader.csproj
+++ b/src/Moq.Extensions.DataReader/Moq.Extensions.DataReader.csproj
@@ -3,7 +3,8 @@
   
   <PropertyGroup>
     <TargetFramework>$(TargetFrameworkGeneral)</TargetFramework>
-    <RootNamespace>$(PivotalServicesBootstrapName)</RootNamespace>
+    <RootNamespace>$(RootNamespace)</RootNamespace>
+    <AssemblyName>$(PackageId)</AssemblyName>
     <DebugType>Embedded</DebugType>
     <EmbedAllSources>true</EmbedAllSources>
     <UpdateAssemblyInfo>true</UpdateAssemblyInfo>
@@ -14,19 +15,18 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>$(PivotalServicesBootstrapName)</PackageId>
-    <Title>$(PivotalServicesBootstrapName)</Title>
+    <PackageId>$(PackageId)</PackageId>
+    <Title>$(PackageId)</Title>
     <Version>1.0.0</Version>
     <Authors>ajaganathan</Authors>
-    <Company>Pivotal</Company>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>$(PivotalServicesBootstrapCopyright)</Copyright>
-    <RepositoryUrl>https://github.com/alfusinigoj/pivotal_aspnet_bootstrap_extensions.git</RepositoryUrl>
+    <Copyright>$(Copyright)</Copyright>
+    <RepositoryUrl>https://github.com/alfusinigoj/moq_datareader.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>ASP.NET;Handlers;IoC;Autofac;Unity</PackageTags>
-    <Description>ASP.NET framework bootstrap extensions package which helps in managing IoC using DI containers (Autofac, Unity and ServiceCollection) and creating dynamic http handlers on a fly</Description>
-    <PackageProjectUrl>https://www.alfusjaganathan.com/projects/</PackageProjectUrl>
+    <PackageTags>Moq;Mock;IDataReader</PackageTags>
+    <Description>Package which helps mocking IDataReader when using Moq for mocking dependencies when writing unit tests</Description>
+    <PackageProjectUrl>https://alfusinigoj.github.io/moq_datareader</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -34,16 +34,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="$(MicrosoftAspNetVersion)" />
-    <PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="$(MicrosoftAspNetVersion)" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="$(MicrosoftExtensionsVersion)" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="$(MicrosoftExtensionsVersion)" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="$(MicrosoftExtensionsVersion)" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System.Web" />
   </ItemGroup>
 
   <ItemGroup>
