--- a/src/Moq.Extensions.DataReader/Moq.Extensions.DataReader.csproj
+++ b/src/Moq.Extensions.DataReader/Moq.Extensions.DataReader.csproj
@@ -3,8 +3,8 @@
   
   <PropertyGroup>
     <TargetFramework>$(TargetFrameworkGeneral)</TargetFramework>
-    <RootNamespace>$(RootNamespace)</RootNamespace>
-    <AssemblyName>$(PackageId)</AssemblyName>
+    <RootNamespace>$(ProjectRootNamespace)</RootNamespace>
+    <AssemblyName>$(ProjectPackageId)</AssemblyName>
     <DebugType>Embedded</DebugType>
     <EmbedAllSources>true</EmbedAllSources>
     <UpdateAssemblyInfo>true</UpdateAssemblyInfo>
@@ -15,13 +15,13 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>$(PackageId)</PackageId>
-    <Title>$(PackageId)</Title>
+    <PackageId>$(ProjectPackageId)</PackageId>
+    <Title>$(ProjectPackageId)</Title>
     <Version>1.0.0</Version>
     <Authors>ajaganathan</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>$(Copyright)</Copyright>
+    <Copyright>$(ProjectCopyright)</Copyright>
     <RepositoryUrl>https://github.com/alfusinigoj/moq_datareader.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Moq;Mock;IDataReader</PackageTags>
