--- a/versions.props
+++ b/versions.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup>
-    <RootNamespace>Moq</RootNamespace>
-    <PackageId>Moq.Extensions.DataReader</PackageId>
-    <Copyright>All rights reserved.</Copyright>
+    <ProjectRootNamespace>Moq</ProjectRootNamespace>
+    <ProjectPackageId>Moq.Extensions.DataReader</ProjectPackageId>
+    <ProjectCopyright>All rights reserved.</ProjectCopyright>
   </PropertyGroup>
   <PropertyGroup>
     <GitVersionMsBuildVersion>5.6.11</GitVersionMsBuildVersion>
