--- a/test/MoqExtensions.DataReader.Tests/MoqExtensions.DataReader.Tests.csproj
+++ b/test/MoqExtensions.DataReader.Tests/MoqExtensions.DataReader.Tests.csproj
@@ -15,6 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MoqExtensions.DataReader\MoqExtensions.DataReader.csproj" />
+    <ProjectReference Include="..\..\src\MoqExtensions.DataReader\MoqExtensions.DataReader.csproj" />
   </ItemGroup>
 </Project>
