--- a/versions.props
+++ b/versions.props
@@ -7,5 +7,6 @@
   <PropertyGroup>
     <GitVersionMsBuildVersion>5.6.11</GitVersionMsBuildVersion>
     <TargetFrameworkGeneral>net5.0</TargetFrameworkGeneral>
+    <TargetFrameworksGeneral>net45;netstandard2.0;netstandard2.1;net5.0</TargetFrameworksGeneral>
   </PropertyGroup>
 </Project>
