use netstandard2.1 to support more versions

--- a/src/MoqExtensions.DataReader/MoqExtensions.DataReader.csproj
+++ b/src/MoqExtensions.DataReader/MoqExtensions.DataReader.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\..\versions.props" />
   
   <PropertyGroup>
-    <TargetFrameworks>$(TargetFrameworksGeneral)</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <RootNamespace>$(ProjectRootNamespace)</RootNamespace>
     <AssemblyName>$(ProjectPackageId)</AssemblyName>
     <DebugType>Embedded</DebugType>
