--- a/test/MoqExtensions.DataReader.Tests/MoqExtensions.DataReader.Tests.csproj
+++ b/test/MoqExtensions.DataReader.Tests/MoqExtensions.DataReader.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\versions.props" />
   <PropertyGroup>
-    <TargetFramework>$(TargetFrameworkGeneral)</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>MoqExtensions.DataReader.Tests</AssemblyName>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
