--- a/src/MoqExtensions.DataReader/MoqExtensions.DataReader.csproj
+++ b/src/MoqExtensions.DataReader/MoqExtensions.DataReader.csproj
@@ -19,15 +19,15 @@
     <PackageId>$(ProjectPackageId)</PackageId>
     <Title>$(ProjectPackageId)</Title>
     <Version>1.0.0</Version>
-    <Authors>ajaganathan</Authors>
+    <Authors>ajaganathan,PivotalServicesOSS</Authors>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>$(ProjectCopyright)</Copyright>
-    <RepositoryUrl>https://github.com/alfusinigoj/moq_datareader.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/PivotalServicesOss/moq_datareader.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>Moq;Mocking;TDD;UnitTesting;IDataReader</PackageTags>
+    <PackageTags>PivotalServicesOSS;Moq;Mocking;TDD;UnitTesting;IDataReader</PackageTags>
     <Description>Package which helps mocking IDataReader when using Moq for mocking dependencies when writing unit tests</Description>
-    <PackageProjectUrl>https://alfusinigoj.github.io/moq_datareader</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/PivotalServicesOss/moq_datareader</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,7 +35,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Moq" Version="4.18.3" />
   </ItemGroup>
 
   <ItemGroup>
