--- a/test/MoqExtensions.DataReader.Tests/MoqExtensions.DataReader.Tests.csproj
+++ b/test/MoqExtensions.DataReader.Tests/MoqExtensions.DataReader.Tests.csproj
@@ -2,14 +2,14 @@
   <Import Project="..\..\versions.props" />
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <AssemblyName>MoqExtensions.DataReader.Tests</AssemblyName>
+    <AssemblyName>PivotalServices.MoqExtensions.DataReader.Tests</AssemblyName>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Moq" Version="4.18.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
     <PackageReference Include="FluentAssertions" Version="6.1.0" />
   </ItemGroup>
