--- a/versions.props
+++ b/versions.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup>
     <ProjectRootNamespace>Moq</ProjectRootNamespace>
-    <ProjectPackageId>MoqExtensions.DataReader</ProjectPackageId>
-    <ProjectCopyright>All rights reserved.</ProjectCopyright>
+    <ProjectPackageId>PivotalServices.MoqExtensions.DataReader</ProjectPackageId>
+    <ProjectCopyright>© PivotalServicesOSS. All rights reserved</ProjectCopyright>
   </PropertyGroup>
   <PropertyGroup>
     <GitVersionMsBuildVersion>5.6.11</GitVersionMsBuildVersion>
