--- a/src/MoqExtensions.DataReader/MoqExtensions.DataReader.csproj
+++ b/src/MoqExtensions.DataReader/MoqExtensions.DataReader.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\..\versions.props" />
   
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <RootNamespace>$(ProjectRootNamespace)</RootNamespace>
     <AssemblyName>$(ProjectPackageId)</AssemblyName>
     <DebugType>Embedded</DebugType>
@@ -13,6 +13,7 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -36,10 +37,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Moq" Version="4.18.3" />
+
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="readme.txt" pack="true" PackagePath="." />
+    <None Include="docs\readme.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
